# AI_Repository

./: README.md  news-tracker.json
codes/file-server/: Dockerfile  README.md  git-init-project.py  main.py  pyproject.toml
codes/file-server/app/: __init__.py  config.py  utils.py
codes/file-server/app/templates/: base.html  editor.html  git.html  index.html
codes/file-server/static/css/: style.css
codes/file-server/static/js/: editor.js
codes/file-server/tests/: conftest.py  test_routes.py  test_utils.py
codes/filemanager/: .dockerignore  .env  .env.example  00_中文摘要.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY_TO_GO.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.multistage  ERROR_REPORT.md  FILE_MANIFEST.md  PORT_UPDATE.md  QUICKSTART.md  README.md  READY_TO_DEPLOY.md  REMOTE_DEPLOY.md  START_HERE.md  cleanup-port-7890.bat  cleanup-port-7890.sh  deploy-with-cleanup.sh  deploy.bat  deploy.sh  docker-compose.yml  manage.py  nginx.conf  remote-deploy.sh  requirements.txt  server-setup.sh
documents/main/: AI Agent 工具对比 2026.md  AI_Agent工具链学习计划.md  AI学习.md  AI工具链学习视频清单_B站.md  AI政策分析与未来趋势.md  Agent Skill 编写规范.md  B站Agent Skill开发教程汇总.md  B站OpenClaw教程汇总.md  Claude Code vs Codex 全方位对比.md  Claude Code 安装使用指南.md  Hermes Agent 安装使用指南.md  Hermes Agent 配置与优化指南.md  OpenClaw 管理宿主机 Claude Code 和 Hermes Agent 指南.md  OpenClaw_Swiss.html  OpenClaw_安装配置使用指南.pptx  Vmware_Workstation_Pro_安装虚拟机.md  Vmware_Workstation_Pro_安装虚拟机.pptx  ai-tools-2026-05-29.md  answer-marker-SKILL.md  bilibili-agent-compare.md  bilibili-dotnet-csharp.md  bilibili-ecommerce.md  (+17 more)
(+19 files in other folders)
